# QtProject

./: .gitignore
VedioPlay/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  playimage.cpp  playimage.h  readthread.cpp  readthread.h  videodecoder.cpp  videodecoder.h
VedioPlay_soft_opengl1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playimage.cpp  playimage.h  readthread.cpp
